<resources>
    <string name="app_name">taller5</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="sign_in">sign in</string>
    <string name="implante_coclear">Implante coclear</string>
    <string name="title">AppCoclear</string>
    <string name="done">Done</string>
    <string name="join_appcoclear">Join AppCoclear</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="first_name1">First name</string>
    <string name="last_name1">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

</resources>
