<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context="com.example.proyect.SegundoFragment" android:id="@+id/frameLayout2">

    <!-- TODO: Update blank fragment layout -->
    <TextView android:layout_width="wrap_content" android:layout_height="20dp"
              android:text="@string/join_appcoclear" android:layout_marginBottom="8dp"
              app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
              app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
              android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.077" android:id="@+id/textView"/>

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:hint="@string/first_name1"
              android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
              app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
              app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.229"
              app:layout_constraintVertical_bias="0.231"
              android:id="@+id/name"/>

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:hint="@string/last_name1"
              android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
              app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
              app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
              app:layout_constraintVertical_bias="0.341" android:id="@+id/lastn"/>

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:hint="@string/email"
              android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
              app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
              app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="1.0"
              app:layout_constraintVertical_bias="0.45"
              android:id="@+id/email"/>

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:hint="@string/password"
              android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
              app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
              app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
              app:layout_constraintVertical_bias="0.556"
              android:id="@+id/pass" android:password="true"/>

    <Button
            android:id="@+id/btn_2"
            android:text="@string/done"
            android:background="@color/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintVertical_bias="0.926" app:layout_constraintHorizontal_bias="0.498"/>
</androidx.constraintlayout.widget.ConstraintLayout>