<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context="com.example.proyect.TercerFragment" android:id="@+id/frameLayout">

    <!-- TODO: Update blank fragment layout -->
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/login" android:layout_marginBottom="8dp"
              app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
              app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
              android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.03"/>

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:hint="@string/email"
              android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
              app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
              app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="1.0"
              app:layout_constraintVertical_bias="0.45"
              android:id="@+id/email"/>

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:hint="@string/password"
              android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
              app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
              app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
              app:layout_constraintVertical_bias="0.556"
              android:id="@+id/pass" android:password="true"/>



    <Button
            android:id="@+id/btn_3"
            android:text="@string/done"
            android:background="@color/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.511" app:layout_constraintVertical_bias="0.831"/>

</androidx.constraintlayout.widget.ConstraintLayout>