<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context="com.example.proyect.primerFragment" android:id="@+id/frameLayout3">

    <!-- TODO: Update blank fragment layout -->
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/implante_coclear" android:layout_marginBottom="8dp"
              app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
              app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
              android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.156"
              app:layout_constraintHorizontal_bias="0.498"/>

    <Button
            android:id="@+id/btn_1"
            android:text="@string/register"
            android:background="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.916"/>
    <Button
            android:id="@+id/btn_"
            android:text="@string/sign_in"
            android:background="@color/btn1"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.792"/>

</androidx.constraintlayout.widget.ConstraintLayout>